still searching by only one word between names or deatails

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -174,7 +174,7 @@
                                     <!-- Buttons -->
                                     <div class="input-group-append">
                                         <!-- Vocal Search Button -->
-                                        <button type="button" class="btn btn-secondary" style="background-color: #28a745; border-color: #28a745;" title="Vocal Search">
+                                        <button type="button" id="voice-search-button" class="btn btn-secondary" style="background-color: #28a745; border-color: #28a745;" title="Vocal Search">
                                             <i class="fas fa-microphone"></i>
                                         </button>
                                         <!-- Image Search Button -->
